Sat Nov 21 18:41:53 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (proc_options): fix pointer overrun. do not advance argv
	  until it is valid.

Sat Nov 21 13:59:09 2015  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/digest/sha1/extconf.rb: OpenSSL's struct name for SHA1 is
	  SHA_CTX. http://openssl.org/docs/man0.9.8/crypto/SHA1.html

Sat Nov 21 13:31:52 2015  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/digest/*/*.[ch]: include ruby.h before digest.h to avoid
	  includeing ext/digest/extconf.h. [Bug #3231]
	  https://msdn.microsoft.com/library/36k2cdd4.aspx

	* ext/digest/*/extconf.rb: remove ext/digest from include search path
	  to avoid confusion of cl.exe.

	* ext/digest/*/*.[ch]: explicitly specify def.h's path.

Sat Nov 21 13:05:16 2015  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/openssl/ossl.h: LibreSSL doesn't have and need e_os2.h.

Sat Nov 21 09:18:10 2015  Koichi Sasada  <ko1@atdot.net>

	* thread_sync.c: reduce the specification of Queue#close.
	  * Queue#close accepts no arguments.
	  * deq'ing on closed queue returns nil, always.
	  [Feature #10600]

	* test/thread/test_queue.rb: catch up this fix.

Sat Nov 21 08:44:21 2015  Koichi Sasada  <ko1@atdot.net>

	* compile.c (iseq_compile_each): add debug information to NODE_STR
	  strings as default.
	  [Feature #11725]

	* insns.def (freezestring): add new instruction to support adding
	  debug information for dynamically constracted strings.

	* compile.c (iseq_compile_each): support adding debug information
	  for NODE_DSTR with freezestring instruction.

	* error.c (rb_error_frozen): change the debug information ID name
	  id_debug_created_info and this field should have a 2 element array
	  containing path and line information.

	* defs/id.def: ditto.

	* test/ruby/test_rubyoptions.rb: catch up this fix.

	* test/ruby/test_iseq.rb: now frozen strings are not same.

Sat Nov 21 04:34:16 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
